@@ -38,5 +38,10 @@ Ensure JavaFX libraries are added to your project settings and configure VM opti
 ## Mermaid.js Link
 https://www.mermaidchart.com/app/projects/00de19cb-61b4-4256-bc14-00f5ed4be153/diagrams/64f664e6-c8fe-4250-9ee3-f789e70e29df/version/v0.1/edit
 
+## Exceutable Jar File
+```bash
+java --module-path /Users/ntull/Desktop/javafx-sdk-21.0.5/lib --add-modules javafx.controls,javafx.fxml -jar OOPTankGame-1.0-SNAPSHOT.jar
+
+
 ## Credits
 Nicholas Tullbane
